Added a scaffolding for azure function

--- a/02_frontend/Secret.Santa.Web/index.html
+++ b/02_frontend/Secret.Santa.Web/index.html
@@ -13,6 +13,12 @@
     <body>
 
         <h1>Secret Santa</h1>
+        <form method="post" action="yourfunctionurlhere">
+            <label for="query">Search query</label>
+            <input id="query" type="text" name="query">
+            <input type="submit" value="Submit">
+        </form>
+        
 
     </body>
 </html>
